Добавлено новое поле 'is_auto_payment_enabled' в модели UserSubscription и OrganizationSubscription для поддержки автоплатежей. Обновлены контроллеры и сервисы для обработки этого поля при подписке и обновлении подписок. Реализованы новые маршруты для включения/выключения автоплатежей для подписок пользователей и организаций, что улучшает управление подписками и повышает удобство использования.
